// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Pagination ConfigProvider should be rendered correctly in RTL 1`] = `
<ul
  class="g-pagination g-pagination-rtl css-var-root"
>
  <li
    aria-disabled="true"
    class="g-pagination-prev g-pagination-disabled"
    title="Previous Page"
  >
    <button
      class="g-pagination-item-link"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        aria-label="right"
        class="gicon gicon-right"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
          />
        </svg>
      </span>
    </button>
  </li>
  <li
    class="g-pagination-item g-pagination-item-1 g-pagination-item-active"
    tabindex="0"
    title="1"
  >
    <a
      rel="nofollow"
    >
      1
    </a>
  </li>
  <li
    class="g-pagination-item g-pagination-item-2"
    tabindex="0"
    title="2"
  >
    <a
      rel="nofollow"
    >
      2
    </a>
  </li>
  <li
    class="g-pagination-item g-pagination-item-3"
    tabindex="0"
    title="3"
  >
    <a
      rel="nofollow"
    >
      3
    </a>
  </li>
  <li
    class="g-pagination-item g-pagination-item-4"
    tabindex="0"
    title="4"
  >
    <a
      rel="nofollow"
    >
      4
    </a>
  </li>
  <li
    class="g-pagination-item g-pagination-item-5"
    tabindex="0"
    title="5"
  >
    <a
      rel="nofollow"
    >
      5
    </a>
  </li>
  <li
    aria-disabled="false"
    class="g-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <button
      class="g-pagination-item-link"
      tabindex="-1"
      type="button"
    >
      <span
        aria-label="left"
        class="gicon gicon-left"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </span>
    </button>
  </li>
</ul>
`;

exports[`Pagination ConfigProvider should be rendered correctly when componentSize is large 1`] = `
<ul
  class="g-pagination g-pagination-large css-var-root"
>
  <li
    aria-disabled="true"
    class="g-pagination-prev g-pagination-disabled"
    title="Previous Page"
  >
    <button
      class="g-pagination-item-link"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        aria-label="left"
        class="gicon gicon-left"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </span>
    </button>
  </li>
  <li
    class="g-pagination-item g-pagination-item-1 g-pagination-item-active"
    tabindex="0"
    title="1"
  >
    <a
      rel="nofollow"
    >
      1
    </a>
  </li>
  <li
    class="g-pagination-item g-pagination-item-2"
    tabindex="0"
    title="2"
  >
    <a
      rel="nofollow"
    >
      2
    </a>
  </li>
  <li
    class="g-pagination-item g-pagination-item-3"
    tabindex="0"
    title="3"
  >
    <a
      rel="nofollow"
    >
      3
    </a>
  </li>
  <li
    class="g-pagination-item g-pagination-item-4"
    tabindex="0"
    title="4"
  >
    <a
      rel="nofollow"
    >
      4
    </a>
  </li>
  <li
    class="g-pagination-item g-pagination-item-5"
    tabindex="0"
    title="5"
  >
    <a
      rel="nofollow"
    >
      5
    </a>
  </li>
  <li
    aria-disabled="false"
    class="g-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <button
      class="g-pagination-item-link"
      tabindex="-1"
      type="button"
    >
      <span
        aria-label="right"
        class="gicon gicon-right"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
          />
        </svg>
      </span>
    </button>
  </li>
  <li
    class="g-pagination-options"
  >
    <div
      class="g-select g-select-lg g-select-outlined g-pagination-options-size-changer css-var-root g-select-css-var g-select-single g-select-show-arrow g-select-show-search"
    >
      <div
        class="g-select-content g-select-content-has-value"
        title="10 / page"
      >
        10 / page
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Page Size"
          autocomplete="off"
          class="g-select-input"
          id="test-id"
          role="combobox"
          type="search"
          value=""
        />
      </div>
      <div
        class="g-select-suffix"
      >
        <span
          aria-label="down"
          class="gicon gicon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </div>
    </div>
  </li>
</ul>
`;

exports[`Pagination rtl render component should be rendered correctly in RTL direction 1`] = `
<ul
  class="g-pagination g-pagination-rtl css-var-root"
>
  <li
    aria-disabled="true"
    class="g-pagination-prev g-pagination-disabled"
    title="Previous Page"
  >
    <button
      class="g-pagination-item-link"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        aria-label="right"
        class="gicon gicon-right"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
          />
        </svg>
      </span>
    </button>
  </li>
  <li
    class="g-pagination-item g-pagination-item-1 g-pagination-item-disabled"
    tabindex="0"
    title="1"
  >
    <a
      rel="nofollow"
    >
      1
    </a>
  </li>
  <li
    aria-disabled="true"
    class="g-pagination-next g-pagination-disabled"
    title="Next Page"
  >
    <button
      class="g-pagination-item-link"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        aria-label="left"
        class="gicon gicon-left"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </span>
    </button>
  </li>
</ul>
`;
